--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -9,6 +9,25 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.1"
+    "@astrojs/rss": "^4.0.10",
+    "@astrojs/sitemap": "^3.2.1",
+    "@eliancodes/brutal-ui": "^0.2.6",
+    "@unocss/astro": "^0.65.3",
+    "astro": "^5.1.1",
+    "astro-font": "^0.1.81",
+    "satori": "^0.12.0",
+    "satori-html": "^0.3.2"
+  },
+  "devDependencies": {
+    "@iconify-json/logos": "^1.2.4",
+    "@iconify-json/uil": "^1.2.3",
+    "@iconify/types": "^2.0.0",
+    "@resvg/resvg-js": "^2.6.2",
+    "@unocss/reset": "^0.65.3",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "prettier-plugin-astro": "^0.14.1",
+    "sharp": "^0.33.5",
+    "unocss": "^0.65.3"
   }
 }
