--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -11,8 +11,11 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@ckeditor/strapi-plugin-ckeditor": "^1.1.0",
     "@strapi/plugin-cloud": "5.6.0",
+    "@strapi/plugin-seo": "^2.0.4",
     "@strapi/plugin-users-permissions": "5.6.0",
+    "@strapi/provider-upload-aws-s3": "^5.6.0",
     "@strapi/strapi": "5.6.0",
     "pg": "8.8.0",
     "react": "^18.0.0",
