feat: add s3 to strapi

--- a/apps/cms/.env.example
+++ b/apps/cms/.env.example
@@ -5,3 +5,8 @@ API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
+S3_ENDPOINT_URL=xxx
+S3_BUCKET_NAME=xxx
+S3_ACCESS_KEY_ID=xxx
+S3_SECRET_ACCESS_KEY=xxx
+STORAGE_URL=xxx
